js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.2.kt
class MyClass {
    companion object {
        konst stringProperty = "-1"
        konst intProperty = 3
        konst pairProperty = -1 to 2
    }
}
